# lct_2024_13

./: Create_Lora_SD.ipynb  Dockerfile  app.py  docker-compose.yml  pyproject.toml  requirements.txt  router.py  schemas.py
Mistral/: model.py  settings.py
Mistral/AutoAWQ/: setup.py
Mistral/AutoAWQ/awq/modules/fused/: attn.py
Mistral/AutoAWQ/awq/modules/linear/: __init__.py
StableDiffusion/: Create_Lora_SD.ipynb  dataset.xlsx  genMainBanner.py  model.py  settings.py  utils.py
StableDiffusion/diffusers/docs/source/zh/: stable_diffusion.md
customer_analyses/: analyses.py  ЛЦТ.xlsx
