[tool.poetry]
name = "nelct"
version = "0.1.0"
description = ""
authors = ["kirill <shkolenko02-032-2004@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["all"], version = "^0.111.0"}
loguru = "^0.7.2"
ruff = "^0.4.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
